2005-07-08  Eric Seidel  <eseidel@apple.com>

        Reviewed by mjs/hyatt (only in concept).

        * JavaScriptCore.pbproj/project.pbxproj: Added JavaScriptCore+SVG
        Turns on RTTI support for JavaScriptCore.framework when
        building the JavaScriptCore+SVG target.  This is needed as
        kdom (part of WebCore+SVG) requires RTTI for the time being.

2005-07-08  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by hyatt.

	- When there are many live objects, GC less often, to try to make
	GC cost proportional to garbage, not proportional to total memory used.

        * kjs/collector.cpp:
        (KJS::Collector::allocate):

2005-07-08  Vicki Murley  <vicki@apple.com>

	Fix from Carsten Guenther, reviewed by Maciej

	- fixed http://bugzilla.opendarwin.org/show_bug.cgi?id=3644 (Error string representation)

	Switch from "-" to ":" in error strings.

        * kjs/error_object.cpp:
        (ErrorProtoFuncImp::call):
        * tests/mozilla/expected.html:

2005-07-08  Geoffrey Garen  <ggaren@apple.com>

        -rolled in patch for http://bugzilla.opendarwin.org/show_bug.cgi?id=3878
        arguments object should be an object not an array

        Reviewed by mjs.

        * kjs/function.cpp:
        (KJS::ArgumentsImp::ArgumentsImp): now manually handles initialization
        we used to get for free by inheriting from ArrayInstanceImp
        * kjs/function.h: ArgumentsImp now inherits from ObjectImp
        * tests/mozilla/expected.html: updated expected test results

2005-07-07  Eric Seidel  <eseidel@apple.com>

        Reviewed by mjs.

        * kjs/grammar.y: removed #define YYMAXDEPTH 0 for bison 2.0
        http://bugzilla.opendarwin.org/show_bug.cgi?id=3882

2005-07-03  Maciej Stachowiak  <mjs@apple.com>

	Original patch from Mark Rowe <opendarwin.org@bdash.net.nz>, reviewed by me.
	Fixes to patch by me, reviewed by John Sullivan.

	- fixed http://bugzilla.opendarwin.org/show_bug.cgi?id=3293

        Test cases added: