@@ -93,10 +93,7 @@ void* Collector::allocate(size_t s)
 
   // collect if needed
   int numLiveObjects = heap.numLiveObjects;
-  int liveAtLastCollect = heap.numLiveObjectsAtLastCollect;
-  int delta = numLiveObjects - liveAtLastCollect;
-  if ((delta >= 1000 && delta >= liveAtLastCollect) ||
-      numLiveObjects == KJS_MEM_LIMIT - 1) {
+  if (numLiveObjects - heap.numLiveObjectsAtLastCollect >= ALLOCATIONS_PER_COLLECTION) {
     collect();
     numLiveObjects = heap.numLiveObjects;
   }
